[project]
name = "playstv-recovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "selenium>=4.35.0",
    "shortuuid>=1.0.13",
]
