[project]
name = "playstv-recovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "aiolimiter>=1.2.1",
    "bs4>=0.0.2",
    "rich>=14.1.0",
    "selenium>=4.35.0",
]

[project.scripts]
recover = "playstv_recovery:cli.main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
